--- a/tmux.conf
+++ b/tmux.conf
@@ -25,3 +25,8 @@ bind-key a set-window-option synchronize-panes  # Sycronize panes
 set -g default-terminal "screen-256color"  # Fancy Colors
 
 # vim: filetype=config noexpandtab
+
+
+export TERM=xterm-256color
+source ~/.local/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+set-option -g default-terminal "screen-256color"
