--- a/tmux.conf
+++ b/tmux.conf
@@ -6,7 +6,7 @@ set -g mouse on
 set-window-option -g aggressive-resize on
 
 # OS X Reattach to namespace
-set -g default-command "reattach-to-user-namespace -l /bin/zsh"
+#set -g default-command "reattach-to-user-namespace -l /bin/zsh"
 
 # Add right hand status for prefix being pressed
 set -g status-right ' #{?client_prefix,#[reverse]<Prefix>#[noreverse] ,}"#{=21:pane_title}" %H:%M %d-%b-%y'
