removed mouse support for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,6 @@
 # Options
 # Enable mouse mode
-set -g mouse on
+#set -g mouse on
 
 # Expand windows as much as possible when available
 set-window-option -g aggressive-resize on
